[KSCOR-197] - Creating new instances of java.lang.Boolean wastes memory, since Boolean objects are immutable and there are only two useful values of this type.  Use the Boolean.valueOf() method (or Java 1.5 autoboxing) to create Boolean objects instead.
git-svn-id: https://svn.kuali.org/repos/student/ks-core/branches/ks-core-dev@13473 0ac02d80-fb3f-11dc-a574-c57244a850eb